--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>DevFolio Bootstrap Portfolio Template - Index</title>
+    <title>AjAy rAj C</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link rel="icon" type="image/x-icon" href="assets/img/Ajay-passport.jpg">
 
     <!-- Vendor CSS Files -->
     <link
