--- a/index.html
+++ b/index.html
@@ -779,20 +779,20 @@
                       <div class="socials">
                         <ul>
                           <li>
-                            <a href="https://www.facebook.com/ajayrajc.rajeev"
+                            <a target="_blank" href="https://www.facebook.com/ajayrajc.rajeev"
                               ><span class="ico-circle"
                                 ><i class="bi bi-facebook"></i></span
                             ></a>
                           </li>
                           <li>
-                            <a href="https://www.instagram.com/ajay.raj_c"
+                            <a target="_blank" href="https://www.instagram.com/ajay.raj_c"
                               ><span class="ico-circle"
                                 ><i class="bi bi-instagram"></i></span
                             ></a>
                           </li>
                     
                           <li>
-                            <a href="https://www.linkedin.com/in/ajay-raj-c-964710204/"
+                            <a target="_blank" href="https://www.linkedin.com/in/ajay-raj-c-964710204/"
                               ><span class="ico-circle"
                                 ><i class="bi bi-linkedin"></i></span
                             ></a>
